--- a/src/styles/css/layout.css
+++ b/src/styles/css/layout.css
@@ -196,6 +196,15 @@ img {
 .icon-telegram {
   background-image: url(/images/icon/icon_telegram.png);
 }
+.icon-change {
+  background-image: url(/images/icon/icon_change.png);
+}
+.icon-sticker {
+  background-image: url(/images/icon/icon_sticker.png);
+}
+.icon-leave {
+  background-image: url(/images/icon/icon_leave.png);
+}
 .icon-color-black {
   -webkit-filter: brightness(0) saturate(100%) invert(0%) sepia(91%)
     saturate(7448%) hue-rotate(41deg) brightness(104%) contrast(98%);
@@ -6048,6 +6057,9 @@ img {
 .text-link {
   cursor: pointer;
 }
+.text-money {
+  color: #ffaa00;
+}
 .text-gold {
   background: linear-gradient(
     236.68deg,
@@ -6294,7 +6306,7 @@ form {
 .input-group {
   position: relative;
   display: block;
-  padding-bottom: 16px;
+  padding-bottom: 12px;
 }
 .input-group label {
   position: absolute;
@@ -6366,6 +6378,10 @@ form {
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
   transform: translateY(0);
+}
+.input-group .form-control:focus {
+  border-color: rgba(0, 26, 255, 0.537254902) !important;
+  outline: none;
 }
 .input-group .form-control:focus ~ .dropdown_content {
   display: block;
@@ -6443,6 +6459,36 @@ form {
   .form_custom {
     padding: 32px;
   }
+}
+.color-primary {
+  color: #ffaa00;
+}
+.btn_submit {
+  border: none;
+  border-radius: 8px;
+  color: #fff;
+  min-width: 80px;
+  line-height: 44px;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#00c0ff),
+    color-stop(49%, #001aff),
+    to(#6c4ffc)
+  );
+  background-image: linear-gradient(
+    90deg,
+    #00c0ff 0%,
+    #001aff 49%,
+    #6c4ffc 100%
+  );
+  padding: 1px;
+}
+.btn_submit span {
+  display: block;
+  background-color: #00152d;
+  border-radius: 8px;
 }
 .list {
   list-style-type: none;
@@ -6672,7 +6718,7 @@ a[href='none'] {
   position: absolute;
   content: '';
   height: 0%;
-  background-color: rgba(0, 0, 0, 0.85);
+  background-color: rgba(0, 0, 0, 0.5);
   left: 0;
   right: 0;
   -webkit-transition: ease-in-out 0.5s;
@@ -6728,10 +6774,8 @@ a[href='none'] {
     hsl(210, 30%, 20%),
     hsl(255, 30%, 25%)
   );
-  -webkit-box-shadow: var(--m-shadow, 0.4rem 0.4rem 10.2rem 0.2rem)
-    rgba(64, 72, 191, 0.3);
-  box-shadow: var(--m-shadow, 0.4rem 0.4rem 10.2rem 0.2rem)
-    rgba(64, 72, 191, 0.3);
+  -webkit-box-shadow: -1px -1px 25px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px -1px 25px 0px rgba(0, 0, 0, 0.75);
   min-height: 200px;
   border-radius: 0.8rem;
   color: rgba(255, 255, 255, 0.7);
@@ -6742,9 +6786,6 @@ a[href='none'] {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-flex: 1;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
   -webkit-transition: ease-in-out 0.3s;
   transition: ease-in-out 0.3s;
   -webkit-transition-delay: 0.5s;
@@ -6766,6 +6807,7 @@ a[href='none'] {
   flex-shrink: 0;
   background-color: rgba(255, 255, 255, 0.05);
   position: relative;
+  border-radius: 8px 8px 0 0;
 }
 @media ((min-width: 768px) and (orientation:portrait)), (min-width: 1024px) {
   .modal_head {
@@ -6980,6 +7022,24 @@ a[href='none'] {
   .table_quality .list_poker .item .wrap img {
     height: 50px;
   }
+}
+.game .modal .modal_content {
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgba(36, 51, 66, 0.5)),
+    to(rgba(54, 45, 83, 0.5))
+  );
+  background-image: linear-gradient(
+    to right,
+    rgba(36, 51, 66, 0.5),
+    rgba(54, 45, 83, 0.5)
+  );
+  color: #fff;
+}
+#modal_cash .scrollbar {
+  overflow: inherit;
 }
 .accordion-button {
   cursor: pointer;
