--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -2,3 +2,147 @@
   -webkit-animation-iteration-count: 1;
   animation-iteration-count: 1;
 }
+
+.block_sticker {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  padding: 16px;
+  border-radius: 4px;
+  background: #414040;
+  margin: 4px;
+  width: 250px;
+  border: 1 solid rgba(255, 255, 255, 0.8);
+}
+.block_sticker .list {
+  margin: -2px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.block_sticker .list .item {
+  width: 25%;
+  padding: 2px;
+}
+.block_sticker .list .item .imgDrop {
+  padding-top: 100%;
+  cursor: pointer;
+  border-radius: 4px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.block_sticker .list .item .imgDrop:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.game-html .change_button_custom.button.before {
+  font-weight: 500;
+  position: relative;
+  border: 1px solid #054eb5;
+  border-radius: 50px;
+  background-color: #033e91;
+  background-image: radial-gradient(
+      75% 50% at 50% 0%,
+      rgba(165, 237, 244, 0.6588235294),
+      transparent
+    ),
+    radial-gradient(75% 35% at 50% 85%, #30a4c8, transparent);
+  -webkit-box-shadow:
+    inset 0 -2px 4px 1px rgba(7, 71, 154, 0.6),
+    inset 0 -4px 4px 1px rgb(66, 178, 212),
+    inset 0 0 2px 1px rgba(255, 255, 255, 0.2),
+    0 1px 4px 1px rgba(17, 110, 231, 0.2),
+    0 1px 4px 1px rgba(0, 0, 0, 0.1);
+  box-shadow:
+    inset 0 -2px 4px 1px rgba(7, 71, 154, 0.6),
+    inset 0 -4px 4px 1px rgb(66, 178, 212),
+    inset 0 0 2px 1px rgba(255, 255, 255, 0.2),
+    0 1px 4px 1px rgba(17, 110, 231, 0.2),
+    0 1px 4px 1px rgba(0, 0, 0, 0.1);
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 1px #116ee7;
+  -webkit-transition-property:
+    border-color,
+    background-color,
+    -webkit-transform;
+  transition-property:
+    border-color,
+    background-color,
+    -webkit-transform;
+  transition-property: border-color, transform, background-color;
+  transition-property:
+    border-color,
+    transform,
+    background-color,
+    -webkit-transform;
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+  padding: 0 12px;
+}
+@media (min-width: 320px) and (orientation: portrait),
+  (max-width: 1023px) and (orientation: landscape) {
+  .game-html .change_button_custom.button.before {
+    font-size: 11px;
+  }
+  .game-html .change_button_custom.button.before .icon {
+    width: 14px;
+    height: 14px;
+  }
+}
+@media (min-width: 1024px), ((min-width: 768px) and (orientation: portrait)) {
+  .game-html .change_button_custom.button.before {
+    padding: 6px 16px;
+    min-width: 8em;
+  }
+}
+.game-html .change_button_custom.button.before::after {
+  content: '';
+  position: absolute;
+  top: 1px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  border-radius: 50px;
+  width: 80%;
+  height: 40%;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(244, 254, 255, 0.4431372549)),
+    to(transparent)
+  );
+  background-image: linear-gradient(
+    to bottom,
+    rgba(244, 254, 255, 0.4431372549),
+    transparent
+  );
+  opacity: 0.75;
+}
+.game-html .change_button_custom.button.before:hover {
+  -webkit-transform: scale(1.04);
+  -ms-transform: scale(1.04);
+  transform: scale(1.04);
+}
+.game-html .change_button_custom.button.before:active {
+  border-color: #0048d5;
+  -webkit-transform: scale(0.96);
+  -ms-transform: scale(0.96);
+  transform: scale(0.96);
+  background-color: #0048d5;
+}
+
+.game-html .change_item_custom.item {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  color: #fff;
+  font-weight: 500;
+  font-size: 75%;
+  line-height: 18px;
+  border: 1px solid transparent;
+  cursor: pointer;
+}
