--- a/src/styles/css/game.css
+++ b/src/styles/css/game.css
@@ -3706,8 +3706,15 @@ html {
   }
 }
 .game-html .group_tool .toolbar .item {
-  border: 1px solid #4b4b4b;
   background-color: #1b1b1b;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgb(98, 97, 97)),
+    to(#101010)
+  );
+  background-image: linear-gradient(180deg, rgb(98, 97, 97), #101010);
   border-radius: 4px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3726,6 +3733,7 @@ html {
   -ms-flex-positive: 1;
   flex-grow: 1;
   gap: 4px;
+  overflow: hidden;
 }
 @media (min-width: 1024px), ((min-width: 768px) and (orientation: portrait)) {
   .game-html .group_tool .toolbar .item {
@@ -3742,34 +3750,45 @@ html {
     gap: 8px;
   }
 }
-.game-html .group_tool .toolbar .item:before {
+.game-html .group_tool .toolbar .item.has_check:before,
+.game-html .group_tool .toolbar .item.has_check:after {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  height: 70%;
   content: '';
-  background-image: -webkit-gradient(
-    linear,
-    left bottom,
-    left top,
-    from(rgba(75, 75, 75, 0)),
-    color-stop(192.86%, #b1b0b0)
-  );
-  background-image: linear-gradient(
-    0deg,
-    rgba(75, 75, 75, 0) 0%,
-    #b1b0b0 192.86%
-  );
-  border-radius: 4px;
+  background-repeat: no-repeat;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
+}
+.game-html .group_tool .toolbar .item.has_check:after {
+  width: 22px;
+  height: 22px;
+  top: 0;
+  left: 0;
+  border: 1px solid #888;
+  background-color: #555;
+  background-position: center;
+  background-size: 12px;
+  border-radius: 4px 0 2px 0;
+}
+.game-html .group_tool .toolbar .item.has_check:before {
+  right: 0;
+  bottom: 0;
+  border: 1px solid #888;
+  border-radius: 4px;
   pointer-events: none;
+  background-position: top -1px left -1px;
+  background-size: 28px;
 }
 .game-html .group_tool .toolbar .item:hover {
-  -webkit-box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
-  box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
-  background-color: #111111;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgb(120, 118, 106)),
+    to(#111010)
+  );
+  background-image: linear-gradient(180deg, rgb(120, 118, 106), #111010);
 }
 .game-html .group_tool .toolbar .item:focus-within:before {
   height: 50%;
@@ -3811,8 +3830,6 @@ html {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 112.5%;
-  -webkit-box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.2509803922);
-  box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.2509803922);
   text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
   -webkit-box-ordinal-group: 0;
   -ms-flex-order: -1;
@@ -3840,8 +3857,24 @@ html {
   justify-content: center;
   gap: 8px;
 }
+.game-html .group_tool .toolbar .item.has_check.active:after {
+  background-color: #0452fc;
+  border-color: #0452fc;
+  background-image: url(/images/icon/icon_check.png);
+}
+.game-html .group_tool .toolbar .item.has_check.active:before {
+  border-width: 2px;
+  -webkit-filter: brightness(0) saturate(100%) invert(24%) sepia(100%)
+    saturate(5645%) hue-rotate(222deg) brightness(101%) contrast(108%);
+  filter: brightness(0) saturate(100%) invert(24%) sepia(100%) saturate(5645%)
+    hue-rotate(222deg) brightness(101%) contrast(108%);
+}
 .game-html .group_tool .toolbar .item:nth-child(4) {
   width: calc(66.6666666667% - 0.6666666667px);
+}
+.game-html .group_tool .toolbar .item:nth-child(4):before,
+.game-html .group_tool .toolbar .item:nth-child(4):after {
+  display: none;
 }
 @media (min-width: 320px) and (orientation: portrait),
   (max-width: 1023px) and (orientation: landscape) {
